output/history/v6/report.md
<!--
  아카이브: v6 백테스트 실행 시점의 결과 리포트 (2026-08-06)
  메모: 고정손절 -8% + 20일선 이탈, 거래대금 1.5배
-->

# 백테스트 결과 — 52주 신고가 모멘텀 v6 (고정손절 + 20일선 이탈, 거래대금 1.5배)

- 기간: 2016-01-04 ~ 2026-07-31
- 초기자본: 100,000,000원
- 최종자산: 197,568,738원

## 연도별 성과

| 연도 | 거래횟수 | 연수익률 | 승률 | 평균 수익 | 평균 손실 | 손익비 | MDD |
|---|---|---|---|---|---|---|---|
| 2016 | 75 | -10.98% | 24.0% | +5.07% | -5.07% | 1.00 | -11.81% |
| 2017 | 96 | +9.39% | 39.6% | +9.56% | -4.82% | 1.98 | -7.47% |
| 2018 | 78 | -7.52% | 32.1% | +13.01% | -7.12% | 1.83 | -17.53% |
| 2019 | 52 | -1.23% | 36.5% | +8.91% | -5.38% | 1.66 | -3.71% |
| 2020 | 90 | +20.51% | 45.6% | +14.92% | -7.09% | 2.11 | -10.15% |
| 2021 | 110 | +47.13% | 40.0% | +20.27% | -6.25% | 3.24 | -10.47% |
| 2022 | 71 | -16.18% | 19.7% | +6.67% | -7.09% | 0.94 | -15.52% |
| 2023 | 113 | +17.72% | 31.9% | +20.73% | -6.55% | 3.17 | -17.64% |
| 2024 | 146 | +7.31% | 27.4% | +20.32% | -7.01% | 2.90 | -19.54% |
| 2025 | 123 | +5.70% | 32.5% | +18.72% | -7.18% | 2.61 | -14.00% |
| 2026 | 99 | +11.91% | 29.3% | +28.74% | -8.53% | 3.37 | -20.53% |
| 전체 | 1053 | +6.65% (CAGR) | 32.7% | +16.53% | -6.67% | 2.48 | -22.98% |

## 청산 사유별 통계

```
             건수     비중   평균수익률       총손익
reason                                  
MA20_EXIT   657  62.4%   6.59%   491.7백만
STOP_INTRA  368  34.9%  -8.27%  -350.2백만
STOP_GAP     28   2.7%  -11.6%   -44.0백만
```

## 진입 R 구간별 성과

```
      건수     비중    성공률   평균수익률      총손익
진입R                                    
1.0  242  23.0%  16.1%  -0.52%   -7.7백만
1.5  151  14.3%  11.9%   0.84%    4.6백만
2.0  511  48.5%  18.6%   1.64%   87.7백만
2.5  101   9.6%  23.8%   1.37%   24.3백만
3.0   48   4.6%  16.7%  -0.38%  -11.3백만
```

## 시장 국면별 성과

```
           건수     비중    성공률   평균수익률      총손익
국면                                          
강세(1.5R)  630  59.8%  19.0%   1.23%   76.9백만
약세(0.5R)  258  24.5%  15.1%  -0.82%  -16.3백만
횡보(1.0R)  165  15.7%  15.2%   2.39%   36.9백만
```

## 자산 곡선

![equity](equity_curve.png)

## 수익률 상위 10개 매매

| 종목 | 코드 | 진입 | 청산 | 보유 | 수익률 | 진입R | 손익 | 청산사유 | 24%도달 |
|---|---|---|---|---|---|---|---|---|---|
| 에코프로 | 086520 | 2023-02-07 | 2023-05-09 | 91일 | +202.6% | 1.5R | 1,703만 | MA20_EXIT | O |
| 위메이드 | 112040 | 2021-09-01 | 2021-11-26 | 86일 | +186.1% | 2.0R | 1,997만 | MA20_EXIT | O |
| HMM | 011200 | 2021-02-22 | 2021-06-07 | 105일 | +121.8% | 2.0R | 1,200만 | MA20_EXIT | O |
| HD현대일렉트릭 | 267260 | 2024-01-18 | 2024-06-10 | 144일 | +121.5% | 2.0R | 1,493만 | MA20_EXIT | O |
| 엔켐 | 348370 | 2024-01-15 | 2024-03-05 | 50일 | +107.3% | 3.0R | 1,966만 | MA20_EXIT | O |
| 대우건설 | 047040 | 2026-03-13 | 2026-05-13 | 61일 | +100.6% | 2.0R | 1,690만 | MA20_EXIT | O |
| 삼양식품 | 003230 | 2024-04-17 | 2024-07-02 | 76일 | +99.4% | 2.0R | 1,478만 | MA20_EXIT | O |
| 포스코인터내셔널 | 047050 | 2023-06-08 | 2023-08-22 | 75일 | +85.4% | 2.5R | 1,406만 | MA20_EXIT | O |
| 현대무벡스 | 319400 | 2025-12-22 | 2026-02-09 | 49일 | +76.1% | 2.0R | 1,097만 | MA20_EXIT | O |
| 삼성전기 | 009150 | 2026-05-12 | 2026-07-03 | 52일 | +75.6% | 2.5R | 1,741만 | MA20_EXIT | O |
