output/history/v12/report.md
<!--
  아카이브: v12 백테스트 실행 시점의 결과 리포트 (2026-08-06)
  메모: 시장폭(200일선 아래 비율) 국면 + 시장별 필터(코스피60/코스닥120) + 1R 사이징
-->

# 백테스트 결과 — 52주 신고가 모멘텀 v12 (시장폭 국면 + 시장별 필터, 1R)

- 기간: 2016-01-04 ~ 2026-07-31
- 초기자본: 100,000,000원
- 최종자산: 381,771,993원

## 연도별 성과

| 연도 | 거래횟수 | 연수익률 | 승률 | 평균 수익 | 평균 손실 | 손익비 | MDD |
|---|---|---|---|---|---|---|---|
| 2016 | 54 | -10.29% | 27.8% | +5.50% | -4.51% | 1.22 | -12.22% |
| 2017 | 88 | +7.34% | 42.0% | +7.80% | -5.18% | 1.51 | -8.47% |
| 2018 | 48 | +4.03% | 37.5% | +14.66% | -7.59% | 1.93 | -15.08% |
| 2019 | 32 | -3.39% | 34.4% | +8.39% | -5.96% | 1.41 | -8.12% |
| 2020 | 84 | +43.85% | 45.2% | +14.53% | -7.22% | 2.01 | -15.31% |
| 2021 | 90 | +58.29% | 37.8% | +25.86% | -6.73% | 3.84 | -12.39% |
| 2022 | 27 | -15.27% | 11.1% | +5.22% | -6.44% | 0.81 | -14.74% |
| 2023 | 92 | +42.00% | 37.0% | +20.51% | -6.18% | 3.32 | -16.48% |
| 2024 | 86 | -12.28% | 30.2% | +17.08% | -7.21% | 2.37 | -25.25% |
| 2025 | 113 | +18.04% | 30.1% | +20.41% | -7.33% | 2.79 | -26.38% |
| 2026 | 85 | +39.07% | 31.8% | +30.07% | -8.02% | 3.75 | -21.10% |
| 전체 | 799 | +13.51% (CAGR) | 34.7% | +17.41% | -6.69% | 2.60 | -30.31% |

## 청산 사유별 통계

```
             건수     비중    평균수익률       총손익
reason                                   
MA20_EXIT   495  62.0%    7.88%  1077.7백만
STOP_INTRA  281  35.2%   -8.24%  -704.1백만
STOP_GAP     23   2.9%  -11.08%   -91.8백만
```

## 진입 R 구간별 성과

```
      건수     비중    성공률   평균수익률      총손익
진입R                                    
2.0   32   4.0%   3.1%   -3.6%  -18.6백만
3.0  348  43.6%  16.1%   1.69%   97.0백만
4.0  309  38.7%  24.9%   2.91%  248.5백만
5.0   79   9.9%  21.5%   0.77%   31.9백만
6.0   31   3.9%  12.9%  -3.29%  -77.0백만
```

## 시장 국면별 성과

```
           건수     비중    성공률  평균수익률      총손익
국면                                         
강세(3.0R)  366  45.8%  25.4%  2.79%  249.4백만
약세(1.0R)   32   4.0%   3.1%  -3.6%  -18.6백만
횡보(2.0R)  401  50.2%  15.2%  1.05%   50.9백만
```

## 자산 곡선

![equity](equity_curve.png)

## 수익률 상위 10개 매매

| 종목 | 코드 | 진입 | 청산 | 보유 | 수익률 | 진입R | 손익 | 청산사유 | 24%도달 |
|---|---|---|---|---|---|---|---|---|---|
| 에코프로 | 086520 | 2023-02-07 | 2023-05-09 | 91일 | +202.4% | 3.0R | 4,697만 | MA20_EXIT | O |
| 위메이드 | 112040 | 2021-09-01 | 2021-11-26 | 86일 | +186.4% | 4.0R | 5,716만 | MA20_EXIT | O |
| HMM | 011200 | 2021-02-22 | 2021-06-07 | 105일 | +121.6% | 4.0R | 2,591만 | MA20_EXIT | O |
| 엔켐 | 348370 | 2024-01-15 | 2024-03-05 | 50일 | +107.4% | 3.0R | 3,439만 | MA20_EXIT | O |
| 대우건설 | 047040 | 2026-03-13 | 2026-05-13 | 61일 | +100.6% | 4.0R | 5,884만 | MA20_EXIT | O |
| 포스코인터내셔널 | 047050 | 2023-06-08 | 2023-08-22 | 75일 | +85.6% | 5.0R | 717만 | MA20_EXIT | O |
| 현대무벡스 | 319400 | 2025-12-22 | 2026-02-09 | 49일 | +76.0% | 4.0R | 3,305만 | MA20_EXIT | O |
| 두산에너빌리티 | 034020 | 2025-05-14 | 2025-07-07 | 54일 | +68.2% | 3.0R | 1,698만 | MA20_EXIT | O |
| 미래에셋증권 | 006800 | 2026-01-23 | 2026-03-05 | 41일 | +67.5% | 4.0R | 3,583만 | MA20_EXIT | O |
| 로보티즈 | 108490 | 2025-09-18 | 2025-11-18 | 61일 | +67.1% | 4.0R | 2,655만 | MA20_EXIT | O |
